--- a/front.html
+++ b/front.html
@@ -1,1 +1,19 @@
-<header>Hangman</header>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="fedit.css" />
+  </head>
+
+  <body>
+    <header>
+      <a href id="title"><b>Hangman</b></a>
+    </header>
+    <table id="diff">
+      <tbody>
+        <tr>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
+</html>
